# customer-auto-emailer

./: .gitignore  .python-version  LICENSE  README.md  config.py  email_automation.py  google_sheets.py  models.py  pyproject.toml  utils.py
templates/: casual_follow-up.html  formal_follow-up.html
