[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-auto-emailer"
dynamic = ["version"]
description = "Designed to help automate the process of sending follow-up emails to customers."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    "Frankin Hughes <franklinahughes@gmail.com>",
]
maintainers = [
    "Frankin Hughes <franklinahughes@gmail.com>",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]

[project.dependencies]
smtplib = "*"
google-auth = "*"
google-auth-oauthlib = "*"
google-auth-httplib2 = "*"
google-api-python-client = "*"

[project.optional-dependencies]


[project.scripts]


[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"